# RavenswatchModManager

./: .env.example  .gitignore  .mcp.json  .vercelignore  Aladdin_Djinn_GEO.fbx.Geometry  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  biome.json  docker-compose.yml  launcher.py  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  rsmm  rsmm.cmd  rsmm.ps1  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vercel.json
.agents/: VIBE-CODER-REVIEW.md
.github/: renovate.json
.github/workflows/: ci.yml  discord-notify.yml  release.yml
TestModels/: CubeHeadJuliet.glb  Juliet_Test.glb
app/: layout.tsx  page.tsx
app/account/: page.tsx
app/ads/banner/: route.ts
app/auth/signin/: page.tsx
app/auth/signup/: page.tsx
app/download/: page.tsx
app/legal/: page.tsx
app/my-mods/: page.tsx
app/my-mods/[slug]/: page.tsx
app/privacy/: page.tsx
app/publish/: page.tsx
app/registry/: page.tsx
app/registry/[slug]/: page.tsx
apps/api/: .gitignore  Dockerfile  fly.toml  package.json  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts  vercel.json
apps/api/api/: [[route]].ts
apps/api/src/: app.ts  auth.ts  db-errors.ts  env.ts  handler.ts  (+5 more)
apps/desktop/: .env.production  UPDATER.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  tsr.config.json  vite.config.ts  vitest.setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md  rsmm-x86_64-unknown-linux-gnu
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/entitlements/: macos.entitlements
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: launcher_log.rs  lib.rs  main.rs  rsmm_env.rs
apps/docs/: astro.config.mjs  package.json
apps/www/: next.config.mjs  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
data/: cooked_class_map.json  cooked_classes.json  uncooked_tree.txt
docs/: ARCHITECTURE.md  CLI_USAGE.md  CONTRIBUTING.md  DEPLOY.md  DEVELOPER_SETUP.md  GETTING_STARTED.md  INSTALLATION.md  INTERNALS.md  MERLIN_UNLOCK.md  MODDING.md  MOD_AUTHORING.md  README.md  RE_NOTES.md  ROADMAP.md  SDK_AUTHORING.md  SDK_V3.md  SECURITY.md  SETUP.md  STRATEGY.md  TROUBLESHOOTING.md  UNCOOKED_ASSETS.md
docs/_re/: CALLING_GAME_FUNCTIONS.md  GHIDRA_MCP.md  HOOKPOINTS.md  MOD_HOOKS.md  PIPELINE.md  PROTECTOR.md  SEED_MAPGEN.md  SPAWNING.md  run_analysis.sh  run_decompile.sh  run_decompile_all.sh  run_dump_symbols.sh
docs/api/: README.md  config.md  content.md  health.md  i18n.md  intermod.md  repo.md
mods/ConsoleRuntime/: init.lua  manifest.toml
mods/ExampleContentBoss/: init.lua  manifest.toml
mods/ExampleContentEnemy/: init.lua  manifest.toml
mods/ExampleContentHero/: init.lua  manifest.toml
mods/ExampleContentMap/: init.lua  manifest.toml
mods/ExampleCounter/: init.lua  manifest.toml
mods/ExampleDependencies/: init.lua  manifest.toml
mods/ExampleHookMod/: init.lua  manifest.toml
mods/ExampleHookSmoke/: init.lua  manifest.toml
mods/ExampleItemRegistry/: init.lua  manifest.toml
mods/ExampleMagicItem/: build.py  manifest.toml
mods/ExampleRawAssets/: init.lua
mods/ExampleRootOverride/: init.lua  manifest.toml
mods/ExampleScaling/: init.lua  manifest.toml
mods/ExampleSdkAll/: init.lua  manifest.toml
mods/ExampleSdkHello/: init.lua  manifest.toml
mods/ExampleSdkMod/: build.py  manifest.toml
mods/ExampleSeedPin/: init.lua  manifest.toml
mods/ExampleTalent/: init.lua  manifest.toml
mods/ExampleTextPatch/: init.lua  manifest.toml
mods/ExampleTextureSwap/: init.lua  manifest.toml
mods/ExampleUrlPatch/: init.lua  manifest.toml
mods/HyperAggro/: config_schema.toml  init.lua  manifest.toml
mods/ItemCloneTest/: manifest.toml
mods/JulietTest/: manifest.toml
mods/LongerStatusEffects/: README.md  manifest.toml
mods/MerlinUnlock/: README.md  init.lua  manifest.toml  pointers.json
mods/SeedPin/: init.lua  manifest.toml  on_disable.py
mods/TheForgotten/: init.lua  manifest.toml
mods/_merged/: manifest.toml
mods/examplemagicitem/: init.lua  manifest.toml
mods/examplerawassets/: manifest.toml
mods/hyper-agro/: README.md  config.toml
mods/seeded_runs/: manifest.toml  on_disable.py
public/: ads.txt
scripts/: audit-supply-chain.mjs  build-sidecar.py  build-sidecar.sh  build_launcher.sh  bump-version.py  decode_gen_sidecars.py  discord-release-notify.sh  extract_uncooked.py  gen2obj.py  gen_function_patterns.py  ghidra_export.py  migrate-0004.ts  migrate-0005.ts  mine_merlin_unlock.py  patch_merlin_herodef.py  test-discord-webhook.sh  test_pattern_resolve.py
scripts/ghidra_scripts/: ExportDecompiled.java  ExportVftables.java
src/loader/: CMakeLists.txt  build.bat  build.sh  fetch_deps.bat  fetch_deps.sh
src/loader/exports/: winhttp.def
src/loader/include/: fn_call.h  fn_resolver.h  hook_engine.h  hook_events.h  hook_io.h  hook_lua.h  hook_skins.h  hook_vk.h  hook_win32.h  loader.h  script_lua.h
src/loader/lib/: rsmm.lua
src/loader/lua/: rsmm.lua
src/loader/lua/rsmm/: api.lua  config.lua  events.lua  health.lua  i18n.lua  schedule.lua
src/loader/src/: dllmain.cpp  fn_call.cpp  fn_resolver.cpp  hook_engine.cpp  hook_events.cpp  hook_io.cpp  hook_lua.cpp  hook_skins.cpp  hook_vk.cpp  hook_win32.cpp  loader.cpp  script_lua.cpp  tls_callback.cpp
src/rsmm/: __init__.py  logging.py  manifest_graph.py  sdk.py  sdk.pyi  validate.py
tests/: conftest.py  test_animation_roundtrip.py  test_apply_restore.py  test_asset_refs_roundtrip.py  test_atomic_vdf_write.py  test_builder.py  test_cipher.py  test_cli.py  test_cooked_roundtrip.py  test_dds_gltf.py  test_definitions_roundtrip.py  test_doctor.py  test_entity_settings_roundtrip.py  test_geometry_cook.py  test_geometry_roundtrip.py  test_global_values_roundtrip.py  test_gui.py  test_image_decode.py  test_magic_item_cook.py  test_manifest.py  test_merge.py  test_new_asset_registration.py  test_paths.py  test_platform_paths.py  test_run.py  test_sdk.py  test_skeleton_metadata.py  test_texture_roundtrip.py  test_unify.py  test_zip_install.py
(+297 files in other folders)
