[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rsmm"
version = "0.1.0"
description = "Ravenswatch Mod Manager — single-player modding tool for OEngine cooked assets and Lua scripting."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ovilli" }]
requires-python = ">=3.11"
# Runtime is stdlib-only; tomllib (3.11+), http.server, zipfile, etc.
# No runtime dependencies are pulled from PyPI.
dependencies = []
keywords = ["ravenswatch", "modding", "oengine"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Ovilli/RavenswatchModManager"

[project.scripts]
rsmm = "rsmm.cli._dispatch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rsmm*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/loader/third_party"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = ["F401"]   # unused imports: noisy on src/rsmm/__init__ re-exports
