[package]
name = "rsmm-desktop"
version = "0.1.0-1"
description = "Ravenswatch Mod Manager desktop shell"
authors = ["Ovilli"]
edition = "2021"

[lib]
name = "rsmm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
